--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "penguin-playwright-project",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
